@@ -44,6 +44,9 @@
        SYSTEMTAP_RUNTIME, SYSTEMTAP_TAPSET, SYSTEMTAP_DEBUGINFO_PATH
   - nss and nss-tools are required to use this feature.
 
+- Support output file switching by SIGUSR2. Users can command running
+  stapio to switch output file by sending SIGUSR2.
+
 - Memory consumption for scripts involving many uprobes has been
   dramatically reduced.
 
